fixed alignment to be center aligned for whole blog

--- a/themes/terminal/source/css/main.css
+++ b/themes/terminal/source/css/main.css
@@ -229,13 +229,18 @@ ol ol {
   display: flex;
   flex-direction: column;
   padding: 40px;
-  border-right: 1px solid rgba(255, 255, 255, .1);
+  /* border-right: 1px solid rgba(255, 255, 255, .1); */
   max-width: 864px;
   min-height: 100vh;
 
   @media (--phone) {
     padding: 20px;
   }
+}
+
+.center {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .content {
